--- a/Footer/footer.html
+++ b/Footer/footer.html
@@ -1,6 +1,6 @@
 
-<link rel="stylesheet" href="footer.css">
+<!-- <link rel="stylesheet" href="footer.css"> -->
 
-<div class="container">
+<div class="container-div text-center">
     This is a test text
 </div>
