--- a/Footer/footer.html
+++ b/Footer/footer.html
@@ -1,8 +1,5 @@
-
-<!-- <link rel="stylesheet" href="footer.css"> -->
-
 <div class="container-div text-center">
-    This is a test text
+    This is a test text on footer
     This is a test text 2
     This is a test text 3
 </div>
