--- a/src/footer/footer.html
+++ b/src/footer/footer.html
@@ -1,3 +1,10 @@
 <div class="container-div text-center">
-    <h1>Footer section</h1> <!-- remove this line when developing -->
+    <footer class="footer">
+        <div class="footer-row">
+            <div class="footer-col1">
+                <img src="WebsiteLogo.svg" class="logofooter">
+                <p>Sri Padaya, The Sacred Footprint</p>
+            </div>
+        </div>
+    </footer>
 </div>
