--- a/src/footer/footer.html
+++ b/src/footer/footer.html
@@ -1,10 +1,11 @@
 <div class="container-div text-center">
-    <footer class="footer">
+    <!--<footer class="footer">
         <div class="footer-row">
             <div class="footer-col1">
                 <img src="WebsiteLogo.svg" class="logofooter">
                 <p>Sri Padaya, The Sacred Footprint</p>
             </div>
         </div>
-    </footer>
+    </footer>-->
+    <h1>hi</h1>
 </div>
