dev: fixed bugs in tailwind

--- a/src/footer/footer.html
+++ b/src/footer/footer.html
@@ -1,11 +1,10 @@
-<div class="container-div text-center">
-    <!--<footer class="footer">
+<div class="container-div">
+    <footer class="footer">
         <div class="footer-row">
             <div class="footer-col1">
-                <img src="WebsiteLogo.svg" class="logofooter">
-                <p>Sri Padaya, The Sacred Footprint</p>
+                <img src="../../public/WebsiteLogo.svg" class="logofooter">
+                <p class="XX">Sri Padaya, The Sacred Footprint</p>
             </div>
         </div>
-    </footer>-->
-    <h1>hi</h1>
+    </footer>
 </div>
