dev: fixed some bugs in footer and created homeGallery section

--- a/src/footer/footer.html
+++ b/src/footer/footer.html
@@ -1,4 +1,5 @@
-<footer>
+<div class="footer-main-div">
+    <footer>
         <div class="container-div">
             <div class="logosec">
                 <div class="logosec-part1">
@@ -53,3 +54,5 @@
             <span>Privacy Policy | Project by NSBM Undergraduates</span>
         </div>
     </div>
+    
+</div>
