dev: gallery section

--- a/index.html
+++ b/index.html
@@ -127,14 +127,15 @@
 
   <!-------------------- Gallery Section -------------------->
 
-  <div class="gallery-section-container">
-    <div class="gallery-image-1"></div>
-    <div class="gallery-image-2"></div>
-    <div class="gallery-image-3"></div>
-    <div class="gallery-image-4"></div>
-    <div class="gallery-image-5"></div>
-    <div class="gallery-image-6"></div>
-  </div>
+  <div class="container-card">
+    <div class="card">
+        <div class="card-content">
+            <h3>See the real beauty</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.</p>
+            <button>View Gallery</button>
+        </div>
+    </div>
+</div>
 
   <!-------------------- Gallery Section End -------------------->
 
