--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@
 
     <div class="intro-bottom-right">
       <h3><span>6 trails,</span> One Sacred location</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna.
-        Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
-        tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur
-        pellentesque nibh nibh, at maximus ante fermentum sit amet.</p>
+      <p>There are several routes that can be taken to reach Sri Pada, also known as Adam's Peak, in Sri Lanka. The most popular route is the Hatton-Nallathanni route, which starts in the town of Hatton and passes through the villages of Nallathanni and Kuruwita before reaching the mountain. This route is well-marked and relatively easy to follow, and it takes about 5-7 hours to reach the summit depending on the pace of the hike.
+
+      </p>
       <button>View Routes</button>
     </div>
   </div>
@@ -131,7 +130,7 @@
     <div class="card">
         <div class="card-content">
             <h3>See the real beauty</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.</p>
+            <p>View all the beautiful photos of “Sri Padaya”</p>
             <button>View Gallery</button>
         </div>
     </div>
