dev:explore page

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <img id="mobile-exit" class="mobile-menu-exit" src="../../public/exit.svg" alt="close navigation" />
 
             <ul class="nav-items">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Explore</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="/src/pages/explore.html">Explore</a></li>
               <li><a href="#">History</a></li>
               <li><a href="#">Routes</a></li>
               <li><a href="#">Gallery</a></li>
@@ -67,9 +67,12 @@
         </p>
         <a href="#" style="text-decoration: none;">
           <div class="hero-button">
-            <div class="hero-button-text">
-              Explore More
-            </div>
+            <a href="./src/pages/explore.html">
+              <div class="hero-button-text">
+                Explore More
+              </div>
+
+            </a>
         </a>
       </div>
     </div>
